Fix for bug 285161: access keys don't work on non latin locales when Alt+letter is pressed together r=neil sr=roc a=asa